# klipin

./: .env.example  .env.production.example  .gitignore  Caddyfile  DEPLOY.md  PLAN.md  docker-compose.caddy.yml  docker-compose.yml
apps/api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 4957691915a2_init_schema.py  9edc5d307921_add_clip_title.py
apps/api/src/klipin/: config.py  db.py  main.py  models.py  security.py
apps/api/src/klipin/routers/: auth.py  jobs.py  payments.py
apps/api/src/klipin/scripts/: cleanup_storage.py  create_user.py
apps/api/src/klipin/services/: ffmpeg.py  highlight.py  midtrans.py  pipeline.py  reframe.py  render.py  subtitle.py  transcribe.py  youtube.py
apps/web/: .dockerignore  Dockerfile  package.json
apps/web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/app/contact/: page.tsx
apps/web/app/dashboard/: CookiesPanel.tsx  page.tsx
apps/web/app/dashboard/[id]/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/payment/success/: page.tsx
apps/web/app/pricing/: page.tsx
apps/web/app/privacy/: page.tsx
apps/web/app/register/: page.tsx
apps/web/app/terms/: page.tsx
apps/web/components/: theme-toggle.tsx
apps/web/components/ui/: button.tsx  card.tsx  input.tsx  skeleton.tsx  toaster.tsx
apps/web/lib/: api.ts  auth.ts
infra/anthropic-proxy/: worker.js
nginx/: klipin.aldirifai.com.conf
