[project]
name = "klipin-api"
version = "0.1.0"
description = "Klipin backend — AI video clipper for Indonesia"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.7",
    "pyjwt>=2.10",
    "argon2-cffi>=23.1",
    "python-multipart>=0.0.20",
    "yt-dlp>=2026.3.17",
    "bgutil-ytdlp-pot-provider>=1.2",
    "anthropic>=0.97.0",
    "replicate>=1.0.7",
    "aiofiles>=25.1.0",
    "numpy>=2.4.4",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/klipin"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "SIM"]
ignore = ["B008"]  # fastapi Depends() in defaults

[tool.ruff.lint.per-file-ignores]
"src/klipin/services/highlight.py" = ["E501"]  # long Indonesian prompt copy

[tool.pytest.ini_options]
asyncio_mode = "auto"
